<resources>
    <string name="myapplication_name">高值柜v3.0</string>

    <!--bugly-->
    <string name="bugly_val">b8f3fdae17</string>
    <string name="press_again_exit">再按一次退出</string>
    <string name="login_title">用户名登录</string>
    <string name="login_face_title">人脸识别登录</string>
    <string name="content_stock_status">库存状态</string>
    <string name="content_consume_operate">耗材操作</string>
    <string name="content_running_wate">耗材流水</string>
    <string name="content_take_notes">领用使用</string>
    <string name="content_timely_check">实时盘点</string>
    <string name="content_exception_deal">异常处理</string>

    <string name="seven_name">名称</string>
    <string name="seven_epc">EPC</string>
    <string name="seven_model">规格型号</string>
    <string name="seven_effect_period">效期</string>
    <string name="seven_number">柜号</string>
    <string name="seven_timely">实时扫描</string>
    <string name="seven_book">账面库存</string>

    <string name="connection_fails">链接失败，请检查网络！</string>
    <string name="ver_title">版本更新提醒</string>
    <string name="ver_cancel">稍后再说</string>
    <string name="ver_ok">立刻更新</string>

    <string name="fast_in_more_string">注意：您还有出柜耗材尚未确认，请完成操作后确认！</string>
    <string name="fast_in_error_string">注意：异常耗材禁止入柜，请重新开柜取出！</string>
    <string name="fast_out_more_string">注意：您还有入柜耗材尚未确认，请完成操作后确认！</string>
    <string name="fast_out_error_string">注意：异常耗材禁止领用和移出！</string>
    <string name="epc_error_string">注意：请开柜取出异常耗材再进行操作！</string>
    <string name="bind_error_string">注意：请先绑定患者再进行操作！</string>
    <string name="open_error_string">注意：请先关闭柜门再进行操作！</string>
    <string name="outform_error_string">注意：非请领单耗材禁止领用！</string>

    <string name="op_error_lyth">注意：异常耗材禁止领用/退回，请开柜重新操作！</string>
    <string name="op_error_ly">注意：异常耗材禁止领用，请开柜重新操作！</string>
    <string name="op_error_rk">注意：异常耗材禁止入库，请开柜重新操作！</string>
    <string name="op_error_yc">注意：异常耗材禁止移出，请开柜重新操作！</string>
    <string name="op_error_yr">注意：异常耗材禁止移入，请开柜重新操作！</string>
    <string name="op_error_th">注意：异常耗材禁止退回，请开柜重新操作！</string>
    <string name="op_error_tuihuo">注意：异常耗材禁止退货，请开柜重新操作！</string>

    <string name="op_error_newoutmeal">注意：请取出异常耗材再进行操作！</string>

    <string name="log_closs">全日志收集关闭，请重新启动APP，只收集部分警告和崩溃日志！</string>
    <string name="log_open">请重新启动APP，才会进行全日志收集</string>

    <string name="content_clossdoor_text">请关闭柜门再进行操作！</string>
    <string name="exception_text">请选择相应操作的耗材，再进行操作！</string>

    <string name="regist_text"> 1、请注册前，先设置好柜内各个设备的信息。2.1硬件用专有设置软件设置对应ip和端口；3.0硬件用浏览器输入主板IP进行设置。
        设置内容｛MAC地址、IP地址（主板唯一标识）、子网掩码、默认网关、服务器地址（PAD的IP地址）｝，其他端口和串口不能修改！\n
        2、注册右侧柜体信息时（必须按顺序）：配置好ip和端口号 → 扫描设备 → 输入左边整体柜子信息 → 按照顺序输入柜体名称 → 选择上柜、下柜、单柜 → 选择部件名称 → 选择部件标识 →
        操作加号进行下一个部件选择（一个部件选择完成后才能点击加号进行下一个部件的选择）
        → 第一个柜子部件选择完成后 → 添加柜体（多柜或者上下柜需要点击，依次按照上一个设备填写流程进行），完结后点击预注册。\n
        3、高值耗材柜：主柜（带PAD的柜子，2.1硬件只能选单柜，3.0硬件可以是上柜或者单柜）需要注册的设备：填写柜子名称、选择柜子类型（上、下、单）、主控板（2.1硬件标识为li模块短编号，3.0硬件标识为主板ip）、罗丹贝尔reader(对应长的编号)、ic卡（短编号）、指纹仪（同主板ip）。\n
        4、高值耗材柜：辅柜或者下柜只需要注册：填写柜子名称、选择柜子类型（上、下、单，2.1硬件智能选择单柜）、主控板（2.1硬件标识为Li模块短编号，3.0硬件上下柜，请选择与上柜相同的ip标识）、罗丹贝尔reader。\n
        <!--5、（嵌入式耗材柜）需要注册：填写柜体名称、选择柜子类型（单）、多功能集控设备（主板ip）、罗丹贝尔reader(最长编号)、ic卡(数字编号)、指纹仪(主板ip)\n-->
        5、操作时间倒计时：默认20s，下限10s；\n
        6、日志开启和关闭：开启后需要关闭APP重启才会生效，开启后记录全日志。出现问题复现问题的时候可以开启。平时请关闭。
    </string>


</resources>
